# Algorithms-Data-structures

./: CMakeLists.txt  README.md
lab1/: labFunctions.h  main.cpp  taskOneFile.txt
lab1/taskImplementations/: TaskFive.cpp  TaskSix.cpp  taskEight.cpp  taskFive.cpp  taskFour.cpp  taskNine.cpp  taskOne.cpp  taskSeven.cpp  taskSix.cpp  taskTen.cpp  taskThree.cpp  taskTwo.cpp
lab1/testFiles/tFive/: personInput.txt
lab1/testFiles/tSeven/: matrices.txt  output.txt
lab1/testFiles/tSix/: output.txt  realNumbers.txt
lab1/testFiles/tThree/: lowercase.txt  uppercase.txt
lab1/testFiles/tTwo/: fileA.txt  fileB.txt
lab2/: main.cpp
lab3/: banknote.cpp  banknote.h  date.cpp  date.h  main.cpp
lab4/: main.cpp
lab4/tasksClasses/: IntVector.cpp  IntVector.h
